# Build 5.7.7 Release 08/31/2012
1. MUDGrinder area editor has easier to manage parent/child areas & subops -- the old multiselect thing was unbearable.
2. GenBook now uses the Message Maker (from the SHELL command) to add book chapters.
3. (Internal) Database connections can now be kept alive with pings.  See new coffeemud.ini entry: DBPINGINTERVALMINS
4. Most crafting skills now support a LEARN command to gain the recipes to certain found items.
5. Players can now spend points to create their new character stats, if you let them.  See coffeemud.ini entry: STARTSTAT
6. You can now define the training point costs to stat changes with STATSCOST in your coffeemud.ini file
7. Change the items all characters get at creation time with STARTINGITEMS in your coffeemud.ini file
8. Can now COPY areas
9. LIST command now supports AREAS for admins -- choose your own columns or sortings
10.IMPORTANT: previously, mobs would never wander OUT of a room where an admin is -- now they also won't wander INTO a room where an admin is
11.Construction and Masonry skills now support building stairs to create new floors -- rooms must still be purchased.
12.Children now inheret the languages of their parents
13.Players can now sit from a sleeping position (not sure how that got missed).
14.SHOWDAMAGE flag in your coffeemud.ini file now supports SOURCE and TARGET options
15.CLANVOTE option, long supported in the codebase, is now exposed in the coffeemud.ini file
16.(Internal) System can now cache commonly used world searches.  See NOCACHE in coffeemud.ini to turn it off!
17.Bugs fixed in conventional manner.
# Build 5.7.8 Release 09/09/2012
1. Fixed the statistics bug
2. Fixed a bug with variables in Scriptable MPTITLE command
3. Fixed numerous prayers that did not respect elemental immunity/resistance
4. Arcanist Spellcrafted abilities persist over reboots
5. Children now track their number of high-level parents to which benefits are tied to, and can repick their stats and class.